--- a/src/example-preview/components/index.module.scss
+++ b/src/example-preview/components/index.module.scss
@@ -32,6 +32,7 @@
 
   .code-wrap {
     width: 100%;
+    height: 100%;
     min-width: 0;
     overflow: hidden;
     background: var(--shiki-dark-bg, var(--rp-code-block-bg, var(--semi-color-bg-1)));
@@ -63,6 +64,8 @@
       overflow: auto;
       min-height: 0;
       background: var(--shiki-dark-bg, var(--rp-code-block-bg, var(--semi-color-bg-1)));
+      -webkit-text-size-adjust: 100%;
+      text-size-adjust: 100%;
     }
     .code-tab {
       width: 100%;
